<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Setup">

    // first layout: contains message to user "please introduce"

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/setup"
        android:alpha="0.5"/>

    <TextView
        android:id="@+id/textRequest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/inputParameters"
        android:textColor="@color/colorBlack"
        android:gravity="center"
        android:textSize="24sp"
        android:typeface="normal"
        android:layout_marginTop="60dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:textSize="24sp" />


    <TextView
        android:id="@+id/textHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="35dp"
        android:fontFamily="serif-monospace"
        android:text="@string/textHeight"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textRequest" />

    <TextView
        android:id="@+id/textWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="35dp"
        android:fontFamily="serif-monospace"
        android:text="@string/textWeight"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textHeight" />

    <TextView
        android:id="@+id/textAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="95dp"
        android:layout_marginTop="40dp"
        android:fontFamily="serif-monospace"
        android:text="@string/textAge"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.019"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textWeight" />

    <EditText
        android:id="@+id/editHeight"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/enterHeight"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/textHeight"
        app:layout_constraintTop_toBottomOf="@+id/textRequest" />/

    <EditText
        android:id="@+id/editWeight"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/enterWeight"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/textWeight"
        app:layout_constraintTop_toBottomOf="@+id/textHeight" />

    <EditText
        android:id="@+id/editAge"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/enterAge"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/textAge"
        app:layout_constraintTop_toBottomOf="@+id/textWeight" />

    <Button
        android:id="@+id/buttonDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="DONE"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editAge" />

    <TextView
        android:id="@+id/textAllSet"
        android:layout_width="254dp"
        android:layout_height="51dp"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="50dp"
        android:fontFamily="serif-monospace"
        android:visibility="invisible"
        android:text="@string/ready"
        android:textSize="35sp"
        app:layout_constraintTop_toBottomOf="@+id/buttonDone"
        app:layout_constraintStart_toStartOf="parent" />

    <!--<TextView-->
        <!--android:id="@+id/textHello"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginStart="30dp"-->
        <!--android:layout_marginTop="20dp"-->
        <!--android:fontFamily="sans-serif-medium"-->
        <!--android:text="@string/setup_hello"-->
        <!--android:textSize="14sp"-->
        <!--android:typeface="normal"-->
        <!--app:layout_constraintEnd_toStartOf="@+id/textRequest"-->
        <!--app:layout_constraintHorizontal_bias="0.5"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toTopOf="parent" />-->


</android.support.constraint.ConstraintLayout>